--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ div.section {
   margin-left: 2px;
   clear: right;
   border: 0;
-  color: black;
+  color: red;
+  ;
 }
 
 /* Simple Responsive Framework. */
