--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div.section {
   margin-top: 0;
   margin-bottom: 10px;
   border: 2px solid black;
-  background-color: #D3D3D3;
+  background-color: #FFA500;
   
 }
 
