--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
   box-sizing: border-box;
-  font-family: Calibri, Arial;
+  font-family: Arial, Calibri;
 }
+
 h1 {
   margin-bottom: 15px;
   text-align: center;
@@ -16,7 +17,7 @@ div.section {
   
 }
 
-#Tip1 {
+#tip1 {
   background-color: ##7FFF00;
   height: 20px;
   width: 100px;
@@ -30,7 +31,7 @@ div.section {
 
 }
 
-#Tip2 {
+#tip2 {
   background-color: black;
   height: 20px;
   width: 100px;
@@ -45,7 +46,7 @@ div.section {
 
 }
 
-#Tip3 {
+#tip3 {
   background-color: white;
   height: 20px;
   width: 100px;
@@ -67,14 +68,13 @@ div.section {
   clear: right;
   border: 0;
   color: red;
-  ;
 }
 
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
-
 }
+
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
