--- a/my-css.css
+++ b/my-css.css
@@ -13,7 +13,7 @@ div.section {
   margin-top: 0;
   margin-bottom: 10px;
   border: 2px solid black;
-  background-color: gray;
+  background-color: green;
   
 }
 
